gccida/c2/c_expand_asm_operands
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_asm_operands/src/c-typeck.c:7453:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // r13 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_asm_operands/src/c-typeck.c:7459:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_asm_operands/src/c-typeck.c:7461:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_asm_operands/src/c-typeck.c:7495:19: error: expected expression
if ( ( tree_node *)v18 == elements ) 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_asm_operands/src/c-typeck.c:7495:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)v18 == elements ) 
       ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/c_expand_asm_operands/src/obj/c-typeck.o] Error 1
